--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+    <form action="indexq.html" target="_blank">
+        <button>Переход по ссылке</button>
+    </form>
     <div id="center">
         <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
             data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
