--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация!</title>
     <style>
-        body, html {
+        body,
+        html {
             height: 100%;
             margin: 0;
             display: flex;
@@ -23,18 +24,13 @@
 </head>
 
 <body>
-    <form action="indexq.html" target="_blank">
-        <button>Переход по ссылке</button>
-    </form>
     <div id="center">
         <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
-            data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
-        <script type="text/javascript">
-            function onTelegramAuth(user) {
-                alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
-            }
+            data-size="large" data-userpic="false"
+            data-auth-url="https://mil-kil-git-938.github.io/register-player/indexq.html?" data-request-access="write">
         </script>
     </div>
+
 </body>
 
 </html>
