--- a/indexq.html
+++ b/indexq.html
@@ -24,53 +24,37 @@
 
     <script src="js/main.js"></script>
 
-
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
-        #content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        img {
-            border-radius: 50%;
-            margin-top: 10px;
-        }
-    </style>
-
-    
     <div id="content">
         <h1 id="greeting"></h1>
         <img id="photo" alt="User Photo" width="150" height="150" />
     </div>
 
     <script type="text/javascript">
-        function getUserData() {
-            const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.has('userData')) {
-                const userData = JSON.parse(urlParams.get('userData'));
-                return userData;
+        function getQueryParams() {
+            const params = {};
+            const queryString = window.location.search;
+            const urlParams = new URLSearchParams(queryString);
+            for (const [key, value] of urlParams.entries()) {
+                params[key] = value;
             }
-            return null;
+            return params;
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            const userData = getUserData();
-            if (userData) {
-                const greeting = document.getElementById('greeting');
-                const photo = document.getElementById('photo');
+            const params = getQueryParams();
+            const greeting = document.getElementById('greeting');
+            const photo = document.getElementById('photo');
 
-                greeting.textContent = `Привет, ${userData.first_name} ${userData.last_name}!`;
-                photo.src = userData.photo_url;
+            if (params.first_name) {
+                greeting.textContent = `Привет, ${params.first_name}!`;
+            } else {
+                greeting.textContent = 'Привет!';
+            }
+
+            if (params.photo_url) {
+                photo.src = params.photo_url;
+            } else {
+                photo.alt = 'Нет фото';
             }
         });
     </script>
