--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
 <body>
     <div id="center">
         <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
-            data-size="large" data-userpic="false"
-            data-auth-url="https://mil-kil-git-938.github.io/register-player/indexq.html?" data-request-access="write">
+            data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
+            data-request-access="write"></script>
+        <script type="text/javascript">
+            function onTelegramAuth(user) {
+                alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+            }
         </script>
     </div>
 
