--- a/index.html
+++ b/index.html
@@ -19,22 +19,36 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; /* Добавлено для вертикального выравнивания кнопки и сообщения */
         }
     </style>
 </head>
 
 <body>
     <div id="center">
-        <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
-            data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
-            data-request-access="write"></script>
-        <script type="text/javascript">
-            function onTelegramAuth(user) {
-                alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
-            }
-        </script>
+        <div id="telegram-widget"></div>
+        <button onclick="checkAuthorization()">Проверить авторизацию</button>
+        <p id="authorization-status"></p>
     </div>
 
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
+        data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
+        data-request-access="write"></script>
+    <script type="text/javascript">
+        function onTelegramAuth(user) {
+            alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+        }
+
+        function checkAuthorization() {
+            var authStatus = document.getElementById("authorization-status");
+            if (TelegramLogin.authResponse) {
+                var user = TelegramLogin.authResponse.user;
+                authStatus.textContent = 'Пользователь ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ') авторизован.';
+            } else {
+                authStatus.textContent = 'Пользователь не авторизован.';
+            }
+        }
+    </script>
 </body>
 
 </html>
