--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
             data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
             data-request-access="write"></script>
         <script type="text/javascript">
-            function onTelegramAuth(user) {
-                document.getElementById('hell_2').innerHTML = user.first_name;
-            }
         </script>
     </div>
 
-<script src="js/main.js"></script>
+    <script>
+        function onTelegramAuth(user) {
+            document.getElementById('hell_2').innerHTML = user.first_name;
+        }
+    </script>
+
+    <script src="js/main.js"></script>
     
 </body>
 </html>
