--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
         </script>
     </div>
 
-    <script>
+    <script src="js/main.js">
         function onTelegramAuth(user) {
             document.getElementById('hell_2').innerHTML = user.first_name;
+    
         }
     </script>
-
-    <script src="js/main.js"></script>
     
 </body>
 </html>
