--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
         </script>
     </div>
 
-    <script src="js/main.js">
-        function onTelegramAuth(user) {
-            document.getElementById('hell_2').innerHTML = user.first_name;
-    
-        }
-    </script>
+    <script src="js/main.js"></script>
     
 </body>
 </html>
