--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
     <noscript>
         Включите JavaScript!!!
@@ -22,6 +24,11 @@
         <h1 id="result"></h1>
     </div>
 
+    <div id="result_2">
+        <h1 id="text_result">Ваш результат:</h1>
+        <h1 id="result_3"></h1>
+    </div>
+
     <div id="center">
         <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
             data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
@@ -31,6 +38,7 @@
     </div>
 
     <script src="js/main.js"></script>
-    
+
 </body>
+
 </html>
