--- a/index.html
+++ b/index.html
@@ -12,29 +12,34 @@
     <noscript>
         Включите JavaScript!!!
     </noscript>
-    <div id="div_global">
-        <h1 id="hell">Добро пожаловать <span id="hell_2">незнакомец</span>!</h1>
-        <h1 id="null"></h1>
-        <h1 id="info">Здесь мы с вами поиграем в игру</h1>
-        <h1 id="null_2"></h1>
-        <h1 id="pravila">Ваша задача кликать на кнопку, чем больше тем лучше! Удачи!</h1>
-        <h1 id="null_3"></h1>
-        <button id="bt" onclick="OnClickButton()">Клик!</button>
-        <h1 id="null_4"></h1>
-        <h1 id="result"></h1>
+    <div id="warning-message">
+        <div id="foto"></div>
     </div>
+    <div id="wrapper">
+        <div id="div_global">
+            <h1 id="hell">Добро пожаловать <span id="hell_2">незнакомец</span>!</h1>
+            <h1 id="null"></h1>
+            <h1 id="info">Здесь мы с вами поиграем в игру</h1>
+            <h1 id="null_2"></h1>
+            <h1 id="pravila">Ваша задача кликать на кнопку, чем больше тем лучше! Удачи!</h1>
+            <h1 id="null_3"></h1>
+            <button id="bt" onclick="OnClickButton()">Клик!</button>
+            <h1 id="null_4"></h1>
+            <h1 id="result"></h1>
+        </div>
 
-    <div id="result_2">
-        <h1 id="text_result">Ваш результат:</h1>
-        <h1 id="result_3"></h1>
-    </div>
+        <div id="result_2">
+            <h1 id="text_result">Ваш результат:</h1>
+            <h1 id="result_3"></h1>
+        </div>
 
-    <div id="center">
-        <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
-            data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
-            data-request-access="write"></script>
-        <script type="text/javascript">
-        </script>
+        <div id="center">
+            <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="clicker338_bot"
+                data-size="large" data-userpic="false" data-onauth="onTelegramAuth(user)"
+                data-request-access="write"></script>
+            <script type="text/javascript">
+            </script>
+        </div>
     </div>
 
     <script src="js/main.js"></script>
